src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Ad_Recieved__c</fullName>
        <label>Ad Recieved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ad_Size__c</fullName>
        <label>Ad Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Black/White</fullName>
                </value>
                <value>
                    <fullName>1/2 Black/White</fullName>
                </value>
                <value>
                    <fullName>1/4 Black/White</fullName>
                </value>
                <value>
                    <fullName>Full Color</fullName>
                </value>
                <value>
                    <fullName>1/2 Color</fullName>
                </value>
                <value>
                    <fullName>1/4 Color</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_to_Opty_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The moment the task is created and assigned to the opportunity owner this field is checked.</description>
        <label>Assigned to Opportunity Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attended__c</fullName>
        <description>How many people actually attended the event</description>
        <label># Attended</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <description>Who is the training ment for?  Who is the audience, some information to customize the message of the training.</description>
        <label>Audience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>ASA Staff Only</fullName>
                </value>
                <value>
                    <fullName>Bursar/SFS</fullName>
                </value>
                <value>
                    <fullName>Intemediate</fullName>
                </value>
                <value>
                    <fullName>Lender Clients</fullName>
                </value>
                <value>
                    <fullName>Lender Ops</fullName>
                </value>
                <value>
                    <fullName>Lender Rep&apos;s</fullName>
                </value>
                <value>
                    <fullName>Mixed Knowledge Level</fullName>
                </value>
                <value>
                    <fullName>Novice</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Registrar</fullName>
                </value>
                <value>
                    <fullName>School Clients</fullName>
                </value>
                <value>
                    <fullName>Servicer Ops</fullName>
                </value>
                <value>
                    <fullName>Students</fullName>
                </value>
                <value>
                    <fullName>Support Staff</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>VIP&apos;s</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Typer__c</fullName>
        <description>How with the students revieve the Newsletter?</description>
        <label>Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paper</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_Date_Time__c</fullName>
        <description>This field shows the date and the time for the product demonstration.</description>
        <inlineHelpText>This field shows the date and the time for the product demonstration.</inlineHelpText>
        <label>Demo Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <formula>IF(IsTask,false,true)</formula>
        <label>Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_of_Grad_s__c</fullName>
        <description>Number of expected graduates that will be receiving the co branded newsletter</description>
        <label>Expected # of Grads</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Graduation_Periods__c</fullName>
        <description>What months do students usually graduate in?</description>
        <label>Graduation Periods</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sept</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interview_Date__c</fullName>
        <description>The date of the interview also Status should be moved to Interview Scheduled.</description>
        <label>Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Sent__c</fullName>
        <description>Invoice for sponsorship sent on this date</description>
        <label>Invoice Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <description>How much time does the trainer have for this particulate session or workshop</description>
        <label>Session Length</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>45 Min</fullName>
                </value>
                <value>
                    <fullName>60 Min</fullName>
                </value>
                <value>
                    <fullName>75 Min</fullName>
                </value>
                <value>
                    <fullName>90 Min</fullName>
                </value>
                <value>
                    <fullName>Full Day</fullName>
                </value>
                <value>
                    <fullName>1/2 Day Morning</fullName>
                </value>
                <value>
                    <fullName>1/2 Day Afternoon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Not_Assigned_to_Opty_Owner__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Not Assigned to Opty Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OE_Code__c</fullName>
        <label>OE Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Trainer__c</fullName>
        <description>Another person that may be training from ASA that does usually.</description>
        <label>Other Trainer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Rcvd__c</fullName>
        <description>Date sponsorship payment was recieved</description>
        <label>Payment Rcvd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Recieved__c</fullName>
        <label>Payment Recieved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Owner_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Owner Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Owner__c</fullName>
        <formula>Previous_Owner_Id__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Management_Comments__c</fullName>
        <inlineHelpText>This field holds instructions to the requestor related to the product demonstration.</inlineHelpText>
        <label>Product Management Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RT1__ReadytalkAttendanceID__c</fullName>
        <externalId>true</externalId>
        <label>Readytalk Attendance ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Related_to_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Related to Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_Materials__c</fullName>
        <label>Requested Materials</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budget Worksheet</fullName>
                </value>
                <value>
                    <fullName>Deferment/Forbearance Info</fullName>
                </value>
                <value>
                    <fullName>Entr/Exit Counsel Check</fullName>
                </value>
                <value>
                    <fullName>Pre-paid return envels</fullName>
                </value>
                <value>
                    <fullName>Repayment Worksheet</fullName>
                </value>
                <value>
                    <fullName>STAFF Compl Directions</fullName>
                </value>
                <value>
                    <fullName>STAFF Master Prom Notes</fullName>
                </value>
                <value>
                    <fullName>STAFF Master Prom Notes - Imprint</fullName>
                </value>
                <value>
                    <fullName>STAFF School Cert Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_type__c</fullName>
        <description>required for CPS activities to support programs and contracts</description>
        <label>Service type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACT/SAT Registration</fullName>
                </value>
                <value>
                    <fullName>Admissions Advising</fullName>
                </value>
                <value>
                    <fullName>Admissions Advocacy</fullName>
                </value>
                <value>
                    <fullName>Admissions Application Assistance</fullName>
                </value>
                <value>
                    <fullName>Admissions Application Fee Waiver</fullName>
                </value>
                <value>
                    <fullName>Admissions Info</fullName>
                </value>
                <value>
                    <fullName>Attendance Support</fullName>
                </value>
                <value>
                    <fullName>Career Exploration/Planning</fullName>
                </value>
                <value>
                    <fullName>Career Interest Inventory/Assessment</fullName>
                </value>
                <value>
                    <fullName>Classroom Workshops</fullName>
                </value>
                <value>
                    <fullName>College Visits</fullName>
                </value>
                <value>
                    <fullName>Community Events</fullName>
                </value>
                <value>
                    <fullName>Community Service Project</fullName>
                </value>
                <value>
                    <fullName>Cultural Field-trip</fullName>
                </value>
                <value>
                    <fullName>Education Advising</fullName>
                </value>
                <value>
                    <fullName>Educational Field-trip</fullName>
                </value>
                <value>
                    <fullName>Financial Aid Advising</fullName>
                </value>
                <value>
                    <fullName>Financial Aid Advocacy</fullName>
                </value>
                <value>
                    <fullName>Financial Aid Application Assistance</fullName>
                </value>
                <value>
                    <fullName>Financial Aid Info</fullName>
                </value>
                <value>
                    <fullName>Financial Literacy</fullName>
                </value>
                <value>
                    <fullName>Follow-Up</fullName>
                </value>
                <value>
                    <fullName>Loan Assistance</fullName>
                </value>
                <value>
                    <fullName>MCAS/SAT Preparation</fullName>
                </value>
                <value>
                    <fullName>Parent Events</fullName>
                </value>
                <value>
                    <fullName>Presentations/Workshops</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Residential Summer Program</fullName>
                </value>
                <value>
                    <fullName>Scholarship Search</fullName>
                </value>
                <value>
                    <fullName>Senior Advising</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signage__c</fullName>
        <description>What sort of Signage will be at the sponsors table</description>
        <label>Signage?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sign</fullName>
                </value>
                <value>
                    <fullName>Banner</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsored_Items__c</fullName>
        <description>What is being sponsored</description>
        <label>Sponsored Items</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Amount__c</fullName>
        <description>How much is the sponsorhsip cost</description>
        <label>Sponsorship Amount</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Time_Frame__c</fullName>
        <description>When is the training for, please specify when the training is requested for from today the day the request is put in.  ex: You are requesting the training for July and today is May 1st.  60-90 days.</description>
        <label>Time Frame/When</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASAP (next 30 days)</fullName>
                </value>
                <value>
                    <fullName>30-60 Days</fullName>
                </value>
                <value>
                    <fullName>60-90 Days</fullName>
                </value>
                <value>
                    <fullName>90+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WebExECMtgKey__c</fullName>
        <description>The field holds WebEx Event Center Meeting Key</description>
        <label>WebEx Event Center Meeting Key</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Why_Reassigned__c</fullName>
        <label>Why Reassigned</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Skillset</fullName>
                </value>
                <value>
                    <fullName>Out of Office</fullName>
                </value>
                <value>
                    <fullName>Manager Reassignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Years_w_ASA__c</fullName>
        <description>How many years has the school been a client with ASA</description>
        <label>Years w/ ASA</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__pardot_source_id__c</fullName>
        <description>Identifies the Pardot record that caused this activity to be created.</description>
        <externalId>true</externalId>
        <label>Pardot Source Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>x2nd_Trainer__c</fullName>
        <description>Other trainers involved with the event  NOTE:  Assinged TO: is the primary trainer</description>
        <label>2nd Trainer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Betsy Mayotte</fullName>
                </value>
                <value>
                    <fullName>Brad Finger</fullName>
                </value>
                <value>
                    <fullName>Brendan Furey</fullName>
                </value>
                <value>
                    <fullName>Duane Quinn</fullName>
                </value>
                <value>
                    <fullName>Gina Lucente-Cole</fullName>
                </value>
                <value>
                    <fullName>Gretchen Bonfardine</fullName>
                </value>
                <value>
                    <fullName>Jason Burke</fullName>
                </value>
                <value>
                    <fullName>Jennifer Schott</fullName>
                </value>
                <value>
                    <fullName>Martie Adler</fullName>
                </value>
                <value>
                    <fullName>Nancy Jordan</fullName>
                </value>
                <value>
                    <fullName>Sabrina Mainini</fullName>
                </value>
                <value>
                    <fullName>Shawn Monk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>